# fpnglib

./: .gitattributes  AUTHORS  CONTRIBUTING.md  ChangeLog  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Makefile.am  Makefile.in  fpnglib.info  fpnglib.texi  stamp-vti  version.texi
doc/fpnglib-figures/: discrete_distribution.py
doc/snippets/: Makefile.am  Makefile.in  biased_dice.c  biased_dice_2.c  debug.c  dice.c  distrib.c  exponent.c  float64.c  fsimple.c  inf.c  irng.c  isimple.c  lambda.c  max.c  mcpi.c  minmaxfrac.c  minmaxfrac64.c  mu.c  nan.c  nextafter64.c  noandor.c  previous64.c  significand.c  subnormal.c  unitroundoff.c  warning.c
doc/snippets/.deps/: exponent.Po  significand.Po
doc/snippets/.libs/: exponent  significand
examples/: Makefile.am  Makefile.in  biased.c  biased_dice.c  coin.c  ctiming.c  ctiming.h  ddistribution.c  dice.c  flipping.c  fsimple.c  isimple.c  penney_game.c  pi.c  simple.c  timing_mt19937v32.c  timing_mt19937v64.c
fpnglib/: Makefile.am  Makefile.in
m4/: c_flag_check.m4  va_opt_check.m4
src/: Makefile.am  Makefile.in  constants.h  constants32.h  constants64.h  debug.c  debug.h  discrete_distribution.h  float64.c  float64.h  fp.h  fp_double.c  fp_double.h  fp_float.c  fp_float.h  fpngl_config.h.in  fpnglib.h  fpu.c  fpu.h  frng32_t.c  frng32_t.h  frng64_KGW.c  frng64_KGW.h  frng64_LESKGW.c  frng64_LESKGW.h  frng64_division.c  frng64_division.h  frng64_division_fc.c  frng64_division_fc.h  frng64_division_ff.c  frng64_division_ff.h  frng64_division_k.c  frng64_division_k.h  frng64_drand48gnu.c  frng64_drand48gnu.h  frng64_fields.c  frng64_fields.h  frng64_fog05.c  frng64_fog05.h  frng64_fog97.c  (+46 more)
src/tmp/: d_interval.c  d_interval.h  fp.c
tests/: Makefile.am  Makefile.in  check_constants.c  check_constants32.c  check_constants64.c  check_d_interval.c  check_drand48gnu.c  check_float64.c  check_fp.c  check_fp_double.c  check_fpu.c  check_frng64_KGW.c  check_frng64_LESKGW.c  check_frng64_division.c  check_frng64_division_fc.c  check_frng64_division_ff.c  check_frng64_division_k.c  check_frng64_fog05.c  check_frng64_fog97.c  check_frng64_golang.c  check_frng64_java.c  check_frng64_lecuyer_simard.c  check_frng64_rationalLCG10.c  check_irange.c  check_lcg.c  check_mt19937_32.c  check_mt19937_64.c  check_mt19937v32.c  check_mt19937v64.c  check_random.c  check_uirange.c  check_uistack.c  check_utilities.c  check_vnm.c  check_walker_vose.c  check_xorgens.c  tests_frng32.h  tests_frng64.h  tests_irng32.h  tests_irng64.h
tests/tmp/: check_fp_double.c
